[package]
name = "lms_api_gateway_s3"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.1"
openssl = { version = "0.10", features = ["vendored"] }